IaC/xpipe-cloud/WIP/lab-v1-api-collector/idx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lab-v1-api-collector-idx
  name: lab-v1-api-collector-idx
  namespace: xpipe-cloud
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: lab-v1-api-collector-idx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: lab-v1-api-collector-idx
    spec:
      containers:
      - env:
        - name: ES_JAVA_OPTS
          valueFrom:
            configMapKeyRef:
              key: ES_JAVA_OPTS
              name: lab-v1-api-collector-idx-config
        - name: cluster.name
          valueFrom:
            configMapKeyRef:
              key: cluster.name
              name: lab-v1-api-collector-idx-config
        - name: discovery.type
          valueFrom:
            configMapKeyRef:
              key: discovery.type
              name: lab-v1-api-collector-idx-config
        - name: ELASTIC_PASSWORD
          valueFrom:
            secretKeyRef:
              key: ELASTIC_PASSWORD
              name: lab-v1-api-collector-idx-secret
        image: elasticsearch:7.13.3
        imagePullPolicy: IfNotPresent
        #command: [ "tail" ]
        #args: [ "-f", "/dev/null" ]
#        livenessProbe:
#          exec:
#            command:
#            - /bin/sh
#            - -i
#            - -c
#            -  mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}
#          failureThreshold: 3
#          initialDelaySeconds: 30
#          periodSeconds: 10
#          successThreshold: 1
#          timeoutSeconds: 1
        name: lab-v1-api-collector-idx
        ports:
        - containerPort: 9200
          protocol: TCP
        - containerPort: 9300
          protocol: TCP
#        readinessProbe:
#          exec:
#            command:
#            - /bin/sh
#            - -ec
#            - set -ex
#            - mysql -u root -p${MYSQL_ROOT_PASSWORD} -e 'SELECT 1'
#          failureThreshold: 3
#          initialDelaySeconds: 5
#          periodSeconds: 10
#          successThreshold: 1
#          timeoutSeconds: 1
        resources:
          limits:
            memory: 2048Mi
          requests:
            memory: 2048Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: lab-v1-api-collector-idx-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: lab-v1-api-collector-idx-volume
        persistentVolumeClaim:
          claimName: lab-v1-api-collector-idx-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lab-v1-api-collector-idx
  name: lab-v1-api-collector-idx
  namespace: xpipe-cloud
spec:
  ports:
  - name: elasticsearch
    port: 9200
    protocol: TCP
    targetPort: 9200
  - name: elasticsearch-internal
    port: 9300
    protocol: TCP
    targetPort: 9300
  selector:
    app: lab-v1-api-collector-idx
  sessionAffinity: None
  type: ClusterIP
